--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,25 +5,54 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-  build:
-
+  build_and_unit_test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js 20.x
-      uses: actions/setup-node@v3
-      with:
-        node-version: 20.x
-        cache: 'npm'
-    - name: Install dependencies
-      run: npm install
-    - name: Run unit tests
-      run: npm run test:unit
-    - name: Display SoftUni username
-      run: echo "Veronicaa"
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: "npm"
+      - name: Install dependencies
+        run: npm install
+      - name: Run unit tests
+        run: npm run test:unit
+      - name: Display SoftUni username
+        run: echo "Veronicaa"
+
+  run_ui_tests:
+    runs-on: ubuntu-latest
+    needs: build_and_unit_tests
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: "npm"
+      - name: Install dependencies
+        run: npm install
+      - name: Install playwright browsers
+        run: npx playwright install
+      - name: Start the app
+        run: npm start &
+      - name: Run the tests
+        run: npm run test:ui
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: run_ui_tests
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
