--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
 
   run_ui_tests:
     runs-on: ubuntu-latest
-    needs: build_and_unit_tests
+    needs: build_and_unit_test
 
     steps:
       - uses: actions/checkout@v4
